--- a/app/src/main/res/layout/activity_splash_view.xml
+++ b/app/src/main/res/layout/activity_splash_view.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/screenshot_1" />
+        android:src="@drawable/screenshot_first" />
 
 </RelativeLayout>
