--- a/app/src/main/res/layout/activity_mobile_audio_play.xml
+++ b/app/src/main/res/layout/activity_mobile_audio_play.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_mobile_main">
+    android:background="@drawable/bg_cloud_night">
 
     <!--第一行：标题栏-->
     <include layout="@layout/base_tool_bar"/>
