--- a/app/src/main/res/layout/activity_mobile_play_home.xml
+++ b/app/src/main/res/layout/activity_mobile_play_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bg_mobile_main">
+    android:background="@drawable/bg_cloud_night">
 
     <include layout="@layout/base_tool_bar"/>
 
