--- a/app/src/main/res/layout/activity_video_news.xml
+++ b/app/src/main/res/layout/activity_video_news.xml
@@ -102,8 +102,8 @@
                         android:paddingRight="10dp"
                         android:visibility="visible">
                         <ImageView
-                            android:layout_width="18dp"
-                            android:layout_height="18dp"
+                            android:layout_width="@dimen/back_width"
+                            android:layout_height="@dimen/back_height"
                             android:layout_gravity="center"
                             android:background="@drawable/ic_back_white" />
                     </FrameLayout>
