--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_bar_height">58dp</dimen>
     <dimen name="nav_bar_height_more">30dp</dimen>
+    <dimen name="back_height">25dp</dimen>
+    <dimen name="back_width">25dp</dimen>
     <dimen name="highlightSize">18sp</dimen>
     <dimen name="defaultSize">15sp</dimen>
 </resources>
