--- a/app/src/main/res/layout/base_title_bar.xml
+++ b/app/src/main/res/layout/base_title_bar.xml
@@ -4,7 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -13,8 +12,7 @@
         android:layout_height="50dp"
         android:background="@color/colorTheme"
         app:contentInsetStart="0.0dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ToolbarStyle">
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         <FrameLayout
             android:id="@+id/fl_title_menu"
             android:layout_width="wrap_content"
