--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -181,7 +181,7 @@
         </LinearLayout>
         <View style="@style/DeepUnderLine"/>
 
-        <com.ns.yc.lifehelper.weight.MyGridView
+        <com.ns.yc.lifehelper.weight.gridview.MyGridView
             android:id="@+id/gridView"
             android:gravity="center"
             android:numColumns="4"
@@ -189,6 +189,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"/>
+
+
+        <include layout="@layout/include_grid_image"/>
 
     </LinearLayout>
 
