--- a/app/src/main/res/layout/item_wtex_node.xml
+++ b/app/src/main/res/layout/item_wtex_node.xml
@@ -21,7 +21,7 @@
         android:paddingEnd="0dp"
         android:background="@color/whiteBg"/>
 
-    <com.ns.yc.lifehelper.weight.FlowLayout
+    <com.zhy.view.flowlayout.FlowLayout
         android:id="@+id/fl_node_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
