--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               xmlns:tl="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+    android:background="@color/colorWhite">
 
     <View
         android:layout_width="match_parent"
