--- a/app/src/main/res/layout/base_match_banner.xml
+++ b/app/src/main/res/layout/base_match_banner.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.yc.cn.ycbannerlib.BannerView
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
