组件化方案实践与总结

--- a/gank/src/main/res/layout/activity_view_big_image.xml
+++ b/gank/src/main/res/layout/activity_view_big_image.xml
@@ -12,9 +12,9 @@
         android:background="@color/colorTheme"/>
 
     <RelativeLayout
-        android:id="@+id/linearlayout_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:orientation="horizontal">
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="3/48"
             android:textColor="#fff"
-            android:textSize="@dimen/textSize14" />
+            android:textSize="@dimen/textSize15" />
         <TextView
             android:id="@+id/tv_save_image"
             android:layout_width="wrap_content"
