组件化方案实践与总结

--- a/gank/src/main/res/layout/view_pager_very_image.xml
+++ b/gank/src/main/res/layout/view_pager_very_image.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:background="#ff000000">
 
-    <ImageView
+    <com.yc.cn.ycgallerylib.zoom.view.ZoomImageView
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
