--- a/android/src/main/res/layout/base_android_bar.xml
+++ b/android/src/main/res/layout/base_android_bar.xml
@@ -32,10 +32,10 @@
         android:paddingRight="10dp"
         android:visibility="visible">
         <ImageView
-            android:layout_width="18dp"
-            android:layout_height="28dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_back_white" />
+            android:src="@drawable/ic_arrow_back" />
     </FrameLayout>
 
     <!--中间标题-->
