--- a/other/src/main/res/layout/activity_test_other.xml
+++ b/other/src/main/res/layout/activity_test_other.xml
@@ -56,4 +56,13 @@
         android:padding="10dp"
         android:text="缩放图"/>
 
+    <TextView
+        android:id="@+id/tv_6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorAccent"
+        android:padding="10dp"
+        android:text="测试一些功能"/>
+
 </LinearLayout>
