--- a/douban/src/main/res/layout/activity_book_detail_content.xml
+++ b/douban/src/main/res/layout/activity_book_detail_content.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<com.ycbjie.library.weight.CustomScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -98,5 +99,5 @@
             android:textColor="@color/blackText2" />
 
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</com.ycbjie.library.weight.CustomScrollView>
 
