--- a/douban/src/main/res/layout/activity_movie_detail_content.xml
+++ b/douban/src/main/res/layout/activity_movie_detail_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ycbjie.library.weight.CustomScrollView
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -106,4 +106,4 @@
 
     </LinearLayout>
 
-</com.ycbjie.library.weight.CustomScrollView>
+</android.support.v4.widget.NestedScrollView>
