--- a/other/src/main/res/layout/activity_scroll_view.xml
+++ b/other/src/main/res/layout/activity_scroll_view.xml
@@ -1,62 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinator"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/coordinator"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        app:layout_behavior="com.ycbjie.library.weight.FlingBehavior"
+        android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <!--AppBarLayout跟它的名字一样，把容器类的组件全部作为AppBar。-->
+        <!--将AppBarLayout放在CoordinatorLayout中，就可以实现滚动效果。-->
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="wrap_content"
+            app:layout_behavior="com.ycbjie.library.weight.FlingBehavior"
+            android:fitsSystemWindows="true">
 
-            <!--app:contentScrim设置折叠时工具栏布局的颜色-->
-            <!--app:statusBarScrim设置折叠时状态栏的颜色-->
-
-            <!--app:layout_collapseMode折叠模式-->
-            <!--off：这个是默认属性，布局将正常显示，没有折叠的行为。-->
-            <!--pin：CollapsingToolbarLayout折叠后，此布局将固定在顶部。-->
-            <!--parallax：CollapsingToolbarLayout折叠时，此布局也会有视差折叠效果。-->
-            <!--app:layout_collapseParallaxMultiplier设置视差滚动因子，值为：0~1-->
-
-
-            <ImageView
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/girl10"
-                android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.4"/>
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                app:contentScrim="@color/priority_yellow"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="bottom"
-                android:gravity="bottom"
-                android:paddingBottom="1dp"
-                app:layout_collapseMode="pin">
-            </android.support.v7.widget.Toolbar>
+                <!--app:contentScrim设置折叠时工具栏布局的颜色-->
+                <!--app:statusBarScrim设置折叠时状态栏的颜色-->
 
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+                <!--app:layout_collapseParallaxMultiplier设置视差滚动因子，值为：0~1-->
+
+                <!--设置的layout_scrollFlags有如下几种选项： -->
+                <!--scroll: 所有想滚动出屏幕的view都需要设置这个flag- 没有设置这个flag的view将被固定在屏幕顶部。 -->
+                <!--enterAlways: 这个flag让任意向下的滚动都会导致该view变为可见，启用快速“返回模式”。-->
+                <!--enterAlwaysCollapsed: 当你的视图已经设置minHeight属性又使用此标志时，你的视图只能以最小高度进入，只有当滚动视图到达顶部时才扩大到完整高度。 -->
+                <!--exitUntilCollapsed: 当视图会在滚动时，它一直滚动到设置的minHeight时完全隐藏。-->
+
+                <!--app:layout_collapseMode折叠模式-->
+                <!--off：这个是默认属性，布局将正常显示，没有折叠的行为。-->
+                <!--pin：CollapsingToolbarLayout折叠后，此布局将固定在顶部。-->
+                <!--parallax：CollapsingToolbarLayout折叠时，此布局也会有视差折叠效果。-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/shape_alpha_bg"
+                    android:contentDescription="@null"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.4"/>
+
+                <include layout="@layout/include_app_layout"/>
+
+                <!--app:layout_collapseMode="pin"   折叠后固定在顶部-->
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    app:layout_collapseMode="pin">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="10dp"
+                            android:contentDescription="@null"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            app:srcCompat="@drawable/perm_group_system_tools"
+                            tools:ignore="VectorDrawableCompat" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="50dp"
+                            android:contentDescription="@null"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            app:srcCompat="@drawable/perm_group_accounts"
+                            tools:ignore="VectorDrawableCompat" />
+                    </RelativeLayout>
+
+                </android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <!--app:layout_behavior 属性-->
+        <!--如果你使用CoordinatorLayout来实现Toolbar滚动渐变消失动画效果，那就必须在它下面的那个控件中加入-->
+        <include layout="@layout/include_scroll_view"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 
 
-    <include layout="@layout/include_scroll_view"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <ImageView
+        android:id="@+id/iv_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/bg_autumn_tree_min"
+        android:scaleType="fitXY"/>
+
+</FrameLayout>
+
