网络请求异常拦截优化，统一管理请求错误异常提示

--- a/other/src/main/res/layout/activity_test_other.xml
+++ b/other/src/main/res/layout/activity_test_other.xml
@@ -89,5 +89,14 @@
             android:padding="10dp"
             android:text="图文混排"/>
 
+        <TextView
+            android:id="@+id/tv_9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorAccent"
+            android:padding="10dp"
+            android:text="学习深拷贝，浅拷贝"/>
+
     </LinearLayout>
 </com.ns.yc.ycutilslib.scrollView.NoNestedScrollview>
