--- a/other/src/main/res/layout/activity_mixture_text.xml
+++ b/other/src/main/res/layout/activity_mixture_text.xml
@@ -19,6 +19,9 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
+            android:background="@color/colorAccent"
             android:text="测试图文混排"/>
 
 
