去除部分无效代码

--- a/other/src/main/res/layout/activity_mixture_text.xml
+++ b/other/src/main/res/layout/activity_mixture_text.xml
@@ -122,5 +122,12 @@
             android:layout_height="wrap_content"
             android:text="你好"/>
 
+        <TextView
+            android:id="@+id/tv_14"
+            android:layout_margin="10dp"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="你好"/>
+
     </LinearLayout>
 </com.ns.yc.ycutilslib.scrollView.NoNestedScrollview>
