添加nfc的功能

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -227,7 +227,7 @@
         <item>轮播图</item>
         <item>爱心表达</item>
         <item>杀毒进度</item>
-        <item>微信新闻</item>
+        <item>NFC</item>
         <item>飞机大战</item>
         <item>老虎机</item>
         <item>电影评分</item>
