--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,37 +15,46 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <include layout="@layout/base_title_bar"/>
-            <include layout="@layout/view_pager_main"/>
-            <include layout="@layout/activity_main_content"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_main_button"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:paddingStart="10dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingEnd="5dp"
-            android:layout_gravity="end|bottom"
-            android:background="@drawable/shape_button_tran_bg"
-            android:layout_marginBottom="100dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/iv_anim_view"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginEnd="5dp"
-                android:background="@drawable/ic_sales_manager"/>
-            <TextView
-                android:id="@+id/tv_anim_view"
-                android:visibility="visible"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+                <com.ns.yc.ycutilslib.viewPager.NoSlidingViewPager
+                    android:id="@+id/vp_home"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/whiteBg"/>
+            </FrameLayout>
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                xmlns:tl="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="@string/about_me_more"
-                android:textSize="@dimen/textSize10" />
+                android:background="@color/colorWhite">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/gray_black"/>
+
+                <com.flyco.tablayout.CommonTabLayout
+                    android:id="@+id/ctl_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#90ffffff"
+                    tl:tl_iconHeight="23dp"
+                    tl:tl_iconWidth="23dp"
+                    tl:tl_indicator_color="#2C97DE"
+                    tl:tl_indicator_height="0dp"
+                    tl:tl_textSelectColor="#2C97DE"
+                    tl:tl_textUnselectColor="#66000000"
+                    tl:tl_textsize="12sp"
+                    tl:tl_underline_color="#DDDDDD"
+                    tl:tl_underline_height="1dp"/>
+            </LinearLayout>
         </LinearLayout>
     </FrameLayout>
 
