--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <include layout="@layout/base_title_bar"/>
-        <org.yczbj.ycrefreshviewlib.YCRefreshView
+        <org.yczbj.ycrefreshviewlib.view.YCRefreshView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
