--- a/Common/LibraryLayer/src/main/res/layout/base_easy_recycle.xml
+++ b/Common/LibraryLayer/src/main/res/layout/base_easy_recycle.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <org.yczbj.ycrefreshviewlib.YCRefreshView
+    <org.yczbj.ycrefreshviewlib.view.YCRefreshView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
