完善缓存查看工具

--- a/Monitor/MonitorFileLib/src/main/res/layout/item_list_file_view.xml
+++ b/Monitor/MonitorFileLib/src/main/res/layout/item_list_file_view.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="16dp"
-            android:src="@drawable/dk_more_icon"
+            android:src="@drawable/sand_box_more_icon"
             android:visibility="visible" />
 
     </LinearLayout>
