--- a/Monitor/MonitorFileLib/src/main/res/values/colors.xml
+++ b/Monitor/MonitorFileLib/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--主题颜色-->
+    <color name="colorTheme">#252525</color>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
