--- a/Business/LeetBusiness/src/main/res/layout/activity_leet_array.xml
+++ b/Business/LeetBusiness/src/main/res/layout/activity_leet_array.xml
@@ -42,7 +42,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="3."/>
+                android:text="3.啤酒和饮料"/>
 
 
             <TextView
@@ -52,7 +52,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="4."/>
+                android:text="4.数组中只出现一次的数字"/>
 
 
 
